24/02/25 Javier Suarez Lebrero v.0.0.1

--- a/Html/hobby.html
+++ b/Html/hobby.html
@@ -16,18 +16,19 @@
     <ul>
         <h3>Actividades fisicas </h3>
         <li>
-            Correr en mi habitacion (maquina de correr) ir al gimnasio
+            Correr en mi habitacion (maquina de correr) o ir al gimnasio. De pequeño he hecho muchos deportes  como baloncesto o tenis
         </li>
     </ul>
     <ul>
         <h3>Cine y series</h3>
         <li>
-            Mi pelicula favorita es Spider 2 y mi serie favorita es Rick y morty
+            Mi pelicula favorita es Spider 2 y mi serie favorita es Rick y morty (se nota que me gusta la ciencia ficción)
         </li>
     </ul>
     <ul>
         <h3>Lo que mas hago </h3>
-            <li>Jugar videojuegos, pasear o salir con mis amigos</li>
+        <li>Jugar videojuegos con amigos, sobre todo juego cosas de disparo o de una historia principal.</li>
+        <li>pasear o salir con mis amigos</li>
     </ul>
 </section>
     <section class="volver">
