--- a/Html/centro.html
+++ b/Html/centro.html
@@ -9,12 +9,12 @@
     <meta name="description" content="Simple HTML5 Page layout template with header, footer, sidebar etc.">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-	<link rel="stylesheet" href="../Css/style.css">
+	<link rel="stylesheet" href="../Css/hobby.css">
 </head>
 
 <body>
 <header>
-	<div id="logo"><img src="../imagenes/png-transparent-portfolio-briefcase-showcase-business-adobe-portfolio-adobe-family-software-icon.png"
+	<div id="logo"><img src="/Pictures/Saved Pictures/images.png"
 						height="45" width="30"/>Mi Portafolio</div>
 	<nav>
 		<ul>
@@ -26,25 +26,25 @@
 	</nav>
 </header>
 <section>
-	<strong>Página principal en la que podemos encontrar mi CV, mis aficiones, trabajos, etc.</strong>
+	<strong>Página principal en la que podemos encontrar mi CV, mis aficiones, trabajos, y algo de informacion sobre mi.</strong>
 </section>
 <section id="pageContent">
 	<main role="main">
 		<article>
 			<h2>CV</h2>
-			<p> Haciendo click en el boton superior "CV", te envia directamente a mi Curriculum Vitae.</p>
+			<p> Haciendo click en el boton superior "CV", te envia directamente a mi Curriculum.</p>
 		</article>
 		<article>
 			<h2>Sobre mí</h2>
 			<p> Haciendo click en el boton superior "Sobre mí", aparece algunos datos para conocerme mejor.</p>
 		</article>
 		<article>
-			<h2>Aficiones</h2>
-			<p> Haciendo click en el boton superior "Aficiones", estan todas ellas documentadas. </p>
+			<h2>hobby</h2>
+			<p> Haciendo click en el boton superior "hobby", estan todas las cosas que me gusta hacer. </p>
 		</article>
 		<article>
 			<h2>Trabajos</h2>
-			<p> Haciendo click en el boton superior "Trabajos", aparecen algunos de mis trabajos realizados anteriormente.</p>
+			<p> Haciendo click en el boton superior "Trabajos", aparecen algunos de mis trabajos realizados anteriormente en clase.</p>
 		</article>
 	</main>
 </section>
