--- a/Html/sobreMi.html
+++ b/Html/sobreMi.html
@@ -4,65 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Mí</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
-        section {
-            padding: 20px;
-        }
-        h1, h2 {
-            color: #2c3e50;
-        }
-        p {
-            line-height: 1.6;
-        }
-        ul {
-            list-style-type: square;
-            margin-left: 20px;
-        }
-        footer {
-            background-color: #2c3e50;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: absolute;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="../Css/sobreMi.css">
+
 </head>
 <body>
 <header>
     <h1>Sobre Mí</h1>
 </header>
 <section>
-    <h2>¡Hola! Soy [Tu Nombre]</h2>
-    <p>Bienvenido a mi página personal. Soy una persona apasionada por [tu pasión o campo de estudio]. Me encanta aprender, explorar y compartir conocimientos sobre [temas que te interesen]. Actualmente, me encuentro trabajando en [proyectos o actividades actuales].</p>
+    <h2>Cosas sobre Javier</h2>
+    <p>Te ha entrado la curiosidad eeeeeeh</p>
 
-    <h3>Mis intereses</h3>
+    <h3>Te voy a contar un poco de mi vida ya que parece que estas interesado</h3>
+    <p>Me llamo Javier Suarez Lebrero tengo 18 años y soy de alcala , mi cumpleaños es el 31 de agosto (casualmente el mismo dia que mi madre)</p>
     <ul>
-        <li>[Interés 1]</li>
-        <li>[Interés 2]</li>
-        <li>[Interés 3]</li>
+        <p>Mi Familia</p>
+
+        <li>Mi madre es una mujer muy fuerte y alegre aunque a veces da miedo (aguantar a alguien como yo debe ser bastante pesado no la culpo)</li>
+        <li>Mi padre murio cuando yo tenia solo 5 años por lo que no recuerdo mucho de él.</li>
+        <li>Tengo una hermana de 25 años, actualmente ya no vive con nosotros si no que se ha mudado con su novio de salamanca</li>
     </ul>
 
     <h3>Lo que me gusta hacer</h3>
-    <p>En mi tiempo libre disfruto de [actividad o hobby]. También me encanta [algo que te guste hacer mucho]. Mi objetivo en la vida es [tu objetivo o aspiración].</p>
-</section>
+    <p>Si quieres saber mas sobre mi puede ver mis hobbies aquí.</p>
+    <section class="hobby">
+        <a href="hobby.html">
+            <button>Ver mas sobre mí</button>
+        </a>
+    </section>
+    <p>Si quieres volver al menu central pulsa aquí</p>
+    <section class="volver">
+        <a href="centro.html">
+            <button>Volver al centro</button>
+        </a>
 
-<footer>
-    <p>&copy; 2025 [Tu Nombre]. Todos los derechos reservados.</p>
-</footer>
 </body>
 </html>
