24/02/25 Javier Suarez Lebrero v.0.0.1

--- a/Html/Trabajos.html
+++ b/Html/Trabajos.html
@@ -12,7 +12,7 @@
   <h1>Mis Trabajos</h1>
 </header>
 <section>
-  <h2>Aquí te presento los ejercicios que hice para la prueba del  </h2>
+  <h2>Aquí te presento los ejercicios que hice para la prueba del examen  </h2>
   <h3>Primer ejercicio</h3>
   <a href="../links/paginas/ejercicio1.html" >pulsa aqui para ver el ejercicio 1</a>
   <h3>Segundo ejercicio</h3>
