24/02/25 Javier Suarez Lebrero v.0.0.1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Simple HTML5 Page layout template with header, footer, sidebar etc.">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-	<link rel="stylesheet" href="../Css/hobby.css">
+	<link rel="stylesheet" href="Css/Centro.css">
 </head>
 
 <body>
