--- a/Html/hobby.html
+++ b/Html/hobby.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Hobbies</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="../Css/Centro.css">
+    <link rel="stylesheet" href="../Css/hobby.css">
+
 </head>
 <body>
 <header>
