--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						height="45" width="30"/>Mi Portafolio</div>
 	<nav>
 		<ul>
-			<li><a href="CV.html">CV</a>
+			<li><a href="Html/CV.html">CV</a>
 			<li><a href="sobreMi.html">Sobre mí</a>
 			<li><a href="hobby.html">Hobbys</a>
 			<li><a href="trabajos.html">Trabajos</a>
