24/02/25 Javier Suarez Lebrero v.0.0.1

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	<nav>
 		<ul>
 			<li><a href="Html/CV.html">CV</a>
-			<li><a href="sobreMi.html">Sobre mí</a>
-			<li><a href="hobby.html">Hobbys</a>
-			<li><a href="trabajos.html">Trabajos</a>
+			<li><a href="Html/sobreMi.html">Sobre mí</a>
+			<li><a href="Html/hobby.html">Hobbys</a>
+			<li><a href="Html/trabajos.html">Trabajos</a>
 		</ul>
 	</nav>
 </header>
