24/02/25 Javier Suarez Lebrero v.0.0.1

--- a/Html/centro.html
+++ b/Html/centro.html
@@ -21,7 +21,7 @@
 			<li><a href="CV.html">CV</a>
 			<li><a href="sobreMi.html">Sobre mí</a>
 			<li><a href="hobby.html">Hobbys</a>
-			<li><a href="trabajos.html">Trabajos</a>
+			<li><a href="Trabajos.html">Trabajos</a>
 		</ul>
 	</nav>
 </header>
