24/02/25 Javier Suarez Lebrero v.0.0.1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<li><a href="Html/CV.html">CV</a>
 			<li><a href="Html/sobreMi.html">Sobre mí</a>
 			<li><a href="Html/hobby.html">Hobbys</a>
-			<li><a href="Html/trabajos.html">Trabajos</a>
+			<li><a href="Html/Trabajos.html">Trabajos</a>
 		</ul>
 	</nav>
 </header>
