24/02/25 Javier Suarez Lebrero v.0.0.2

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<li><a href="Html/sobreMi.html">Sobre mí</a>
 			<li><a href="Html/hobby.html">Hobbys</a>
 			<li><a href="Html/Trabajos.html">Trabajos</a> </li>
+			<li><a href="Html/Galeria.html">Galeria</a> </li>
 		</ul>
 	</nav>
 </header>
@@ -47,6 +48,10 @@
 		<article>
 			<h2>Trabajos</h2>
 			<p> Haciendo click en el boton superior "Trabajos", aparecen algunos de mis trabajos realizados anteriormente en clase.</p>
+		</article>
+		<article>
+			<h2>Galeria</h2>
+			<p> Haciendo click en el boton superior "Galeria", aparecen algunas imagenes.</p>
 		</article>
 	</main>
 </section>
