24/02/25 Javier Suarez Lebrero v.0.0.2

--- a/Html/hobby.html
+++ b/Html/hobby.html
@@ -33,7 +33,7 @@
     </ul>
 </section>
     <section class="volver">
-        <a href="centro.html">
+        <a href="../index.html.html">
             <button>Volver al centro</button>
         </a>
 
