--- a/Html/sobreMi.html
+++ b/Html/sobreMi.html
@@ -34,7 +34,7 @@
     </section>
     <p>Si quieres volver al menu central pulsa aquí</p>
     <section class="volver">
-        <a href="centro.html">
+        <a href="../index.html.html">
             <button>Volver al centro</button>
         </a>
 
