--- a/Html/Trabajos.html
+++ b/Html/Trabajos.html
@@ -22,7 +22,7 @@
 
 
   <section class="volver">
-    <a href="centro.html">
+    <a href="../index.html.html">
       <button>Volver al centro</button>
     </a>
   </section>
