24/02/25 Javier Suarez Lebrero v.0.0.2

--- a/Html/Trabajos.html
+++ b/Html/Trabajos.html
@@ -14,7 +14,7 @@
 <section>
   <h2>Aquí te presento los ejercicios que hice para la prueba  </h2>
   <h3>Primer ejercicio</h3>
-  <a href="../links/paginas/ejercicio1.html" >pulsa aqui para ver el ejercicio 1</a>
+  <a href="../links/paginas/ejercicio1.html" >Pulsa aqui para ver el ejercicio 1</a>
   <h3>Segundo ejercicio</h3>
   <a href="../links/paginas/ejercicio2.html" >Pulsa aquí para ver el ejercicio 2 </a>
   <h3>Tercer Ejercicio</h3>
